--- a/works_hochzeit.html
+++ b/works_hochzeit.html
@@ -7,7 +7,7 @@
 <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>SELFIE - Personal Photographer HTML Template</title>
+        <title>Vivien Vincze Fotografin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all"/>
