--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 	</section>
-	<footer class="footer-transparent footer">
+	<footer class="footer-opaque ofsInMTop ofsInMBottom footer">
 		<div class="container">
 			<div class="row">
 				<div class="eight columns rights">
