--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 			</section>
-			<footer class="footer-transparent footer">
+			<footer class="footer-opaque ofsInMTop ofsInMBottom footer">
 				<div class="container">
 					<div class="row">
 						<div class="eight columns rights">
