--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</ul>
 		</div>
 	</section>
-	<footer class="footer-transparent footer">
+	<footer class="footer-opaque ofsInMTop ofsInMBottom footer">
 		<div class="container">
 			<div class="row">
 				<div class="eight columns rights">
