--- a/works_babybauch.html
+++ b/works_babybauch.html
@@ -70,14 +70,14 @@
 								</ul>
 							</div>
 							<div class="eight columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch </span>" href="img/albums/babybauch/1.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/1.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/1.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="five columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/2.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/2.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/2.jpg">
 									</div>
@@ -86,21 +86,21 @@
 						</div>
 						<div class="row container">
 							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/3.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/3.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/3.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/4.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/4.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/4.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch </span>" href="img/albums/babybauch/5.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/5.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/5.jpg">
 									</div>
@@ -109,21 +109,21 @@
 						</div>
 						<div class="row container">
 							<div class="six columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/6.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/6.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/6.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="four columns   work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/7.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/7.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/7.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="six columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch </span>" href="img/albums/babybauch/8.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/8.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/8.jpg">
 									</div>
@@ -139,14 +139,14 @@
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Album </span>" href="img/albums/babybauch/10.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album </span>" href="img/albums/babybauch/10.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/10.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Album </span>" href="img/albums/babybauch/11.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album </span>" href="img/albums/babybauch/11.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/11.jpg">
 									</div>
@@ -155,21 +155,21 @@
 						</div>
 						<div class="row container">
 							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/12.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/12.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/12.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/13.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/13.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/13.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch </span>" href="img/albums/babybauch/14.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/14.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/14.jpg">
 									</div>
@@ -178,21 +178,21 @@
 						</div>
 						<div class="row container">
 							<div class="six columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/15.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/15.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/15.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="four columns   work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/16.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/16.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/16.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="six columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch </span>" href="img/albums/babybauch/17.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/17.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/17.jpg">
 									</div>
@@ -208,14 +208,14 @@
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Album </span>" href="img/albums/babybauch/19.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/19.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/19.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Album </span>" href="img/albums/babybauch/20.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/20.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/20.jpg">
 									</div>
@@ -224,21 +224,21 @@
 						</div>
 						<div class="row container">
 							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/21.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/21.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/21.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/22.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/22.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/22.jpg">
 									</div>
 								</a>
 							</div>
 							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch </span>" href="img/albums/babybauch/23.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/23.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/23.jpg">
 									</div>
@@ -247,7 +247,7 @@
 						</div>
 						<div class="row container">
 							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch</span>" href="img/albums/babybauch/24.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Babybauch Photograpy Album</span>" href="img/albums/babybauch/24.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/babybauch/24.jpg">
 									</div>
