--- a/works_hochzeit.html
+++ b/works_hochzeit.html
@@ -132,21 +132,21 @@
 						</div>
 						<div class="row container">
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/hochzeit/9.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/9.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/9.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/10.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/10.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/10.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/11.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/11.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/11.jpg">
 									</div>
@@ -208,14 +208,14 @@
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/19.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/19.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/19.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/20.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/20.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/20.jpg">
 									</div>
@@ -270,21 +270,21 @@
 						</div>
 						<div class="row container">
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/hochzeit/27.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/27.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/27.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/28.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/28.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/28.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/29.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/29.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/29.jpg">
 									</div>
@@ -362,21 +362,21 @@
 						</div>
 						<div class="row container">
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/hochzeit/36.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/36.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/36.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/37.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/37.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/37.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/38.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/38.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/38.jpg">
 									</div>
@@ -431,21 +431,21 @@
 						</div>
 						<div class="row container">
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/hochzeit/45.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/45.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/45.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/46.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/46.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/46.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Album </span>" href="img/albums/hochzeit/47.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Hochzeit Photograpy Album</span>" href="img/albums/hochzeit/47.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/hochzeit/47.jpg">
 									</div>
