--- a/works_neugeborene.html
+++ b/works_neugeborene.html
@@ -139,14 +139,14 @@
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Neugeborene Album </span>" href="img/albums/neugeborene/10.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Neugeborene Photograpy Album </span>" href="img/albums/neugeborene/10.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/neugeborene/10.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Neugeborene Album </span>" href="img/albums/neugeborene/11.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Neugeborene Photograpy Album </span>" href="img/albums/neugeborene/11.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/neugeborene/11.jpg">
 									</div>
