--- a/works_street.html
+++ b/works_street.html
@@ -132,21 +132,21 @@
 						</div>
 						<div class="row container">
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/street/9.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/9.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/9.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Album </span>" href="img/albums/street/10.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/10.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/10.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Album </span>" href="img/albums/street/11.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/11.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/11.jpg">
 									</div>
@@ -201,21 +201,21 @@
 						</div>
 						<div class="row container">
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/street/18.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/18.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/18.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Album </span>" href="img/albums/street/19.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/19.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/19.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Album </span>" href="img/albums/street/20.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/20.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/20.jpg">
 									</div>
@@ -277,14 +277,14 @@
 								</a>
 							</div>
 							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Album </span>" href="img/albums/street/28.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/28.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/28.jpg">
 									</div>	
 								</a>
 							</div>
 							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Album </span>" href="img/albums/street/29.jpg">
+								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/29.jpg">
 									<div class="background-image">
 										<img alt="" class="" src="img/albums/street/29.jpg">
 									</div>
