--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 									„Ein Bild sagt mehr als tausende Worte“, heißt es. Die Bilder sollten also statt Worte sprechen. Meine Referenz finden Sie im Portfolio. Wenn Sie auf das Menü Kontakt klicken, finden Sie meine Kontaktdaten, unter denen ich Sie gerne kontaktieren würde!
 									Alles Liebe
 									Vivien</p>
-						<a href="works.html" class="link link-light">zu den Fotos</a>
+						<a href="works_babybauch.html" class="link link-light">zu den Fotos</a>
 					</div>	
 				</div>
 			</div>
