--- a/works_street.html
+++ b/works_street.html
@@ -23,7 +23,7 @@
 		<![endif]-->
     </head>
     <body>
-		<div id="loader">->
+		<div id="loader">
 			<div id="loaderInner">
 				<div class="loaderBars">
 					<span class="bar1 bar"></span>
