--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,11 @@
 				<div class="nav-bar">
 					<div class="container">
 						<div class="main-nav">
+							<div class="four columns logo-holder">
+								<a href="index.html">
+									<img class="logo" alt="Logo" src="img/logo.png">
+								</a>
+							</div>
 							<div class="twelve columns tRight nav-holder">
 								<a href="#" class="mobile-btn" ><i class="ti-menu"></i></a>
 									<nav class="menu-holder main-nav">
