--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<ul class="menu">
 								<li class="menu"><a class="active" a href="index.html">HOME</a>	</li>
 								<li class="menu"><a href="about.html">ÜBER MICH</a></li>
-								<li class="menu"><a href="works_babybauch.html">PORTFOLIO</a></li>
+								<li class="menu"><a href="works_neugeborene.html">PORTFOLIO</a></li>
 								<li class="menu"><a href="contact.html">KONTAKT</a></li>
 							</ul>
 						</nav>
