--- a/works_street.html
+++ b/works_street.html
@@ -44,11 +44,11 @@
 							</div>
 							<div class="twelve columns tRight nav-holder">
 								<a href="#" class="mobile-btn" ><i class="ti-menu"></i></a>
-									<nav class="menu-holder main-nav">
-										<ul class="menu">
-											<li class="menu"><a  class="active" a href="index.html">HOME</a>	</li>
-											<li class="menu"><a  a href="about.html">ÜBER MICH</a></li>
-											<li class="menu"><a href="works.html">PORTFOLIO</a></li>
+								<nav class="menu-holder main-nav">
+									<ul class="menu">
+											<li class="menu"><a href="index.html">HOME</a></li>
+											<li class="menu"><a href="about.html">ÜBER MICH</a></li>
+											<li class="menu"><a class="active" href="works_babybauch.html">PORTFOLIO</a></li>
 											<li class="menu"><a href="contact.html">KONTAKT</a></li>
 										</ul>
 									</nav>
@@ -57,286 +57,129 @@
 					</div>
 				</div>
 			</header>
-			<section class="works bgGrey ofsTop margTop ofsBottom">
+			<section class="footer-opaque ofsTopH ofsInMBottom footer">
 				<div class="container">
-					<div class="works-holder clearfix" >
-						<div class="row container">	
-							<div class="three columns album-cat">
-								<ul>
-									<li><a href="works_hochzeit.html">Hochzeiten/Events</a></li>
-									<li><a href="works_neugeborene.html">Neugeborene</a></li>
-									<li><a href="works_babybauch.html">Babybauch</a></li>
-									<li><a href="works_street.html">Street Photography</a></li>
-								</ul>
+					<div class="sixteen columns">
+					<div class="album-cat filter margBottom">
+						<ul>
+							<li><a href="works_babybauch.html">BABYBAUCH</a></li>
+							<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
+							<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
+							<li><a href="works_street.html">STREET</a></li>
+						</ul>
+					</div>
+				</div>
+					</div>
+				<div class="row-gallery">
+					<div class="column-gallery">
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/1.jpg"><img src="img/albums/street/1.jpg"></a>
 							</div>
-							<div class="eight columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/1.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/1.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="five columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/2.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/2.jpg">
-									</div>
-								</a>
-							</div>
+							<div class="hovereffect">
+						 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/2.jpg"><img src="img/albums/street/2.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/3.jpg"><img src="img/albums/street/3.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/4.jpg"><img src="img/albums/street/4.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/5.jpg"><img src="img/albums/street/5.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/3.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/3.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/4.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/4.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/5.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/5.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/6.jpg"><img src="img/albums/street/6.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="six columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/6.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/6.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="four columns   work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/7.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/7.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="six columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/8.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/8.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/7.jpg"><img src="img/albums/street/7.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/8.jpg"><img src="img/albums/street/8.jpg"></a>
+						 </div>
+					</div>
+					<div class="column-gallery">
+						
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/9.jpg"><img src="img/albums/street/9.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/9.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/9.jpg">
-									</div>	
-								</a>
-							</div>
-							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/10.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/10.jpg">
-									</div>	
-								</a>
-							</div>
-							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/11.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/11.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/10.jpg"><img src="img/albums/street/10.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/12.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/12.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/13.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/13.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/14.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/14.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/11.jpg"><img src="img/albums/street/11.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="six columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/15.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/15.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="four columns   work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/16.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/16.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="six columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/17.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/17.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/12.jpg"><img src="img/albums/street/12.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/18.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/18.jpg">
-									</div>	
-								</a>
-							</div>
-							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/19.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/19.jpg">
-									</div>	
-								</a>
-							</div>
-							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/20.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/20.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/13.jpg"><img src="img/albums/street/13.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/14.jpg"><img src="img/albums/street/14.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/15.jpg"><img src="img/albums/street/15.jpg"></a>
+						 </div>
+						
+					</div>
+					<div class="column-gallery">
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/16.jpg"><img src="img/albums/street/16.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/21.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/21.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/22.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/22.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/23.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/23.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/17.jpg"><img src="img/albums/street/17.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="six columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/24.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/24.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="four columns   work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/25.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/25.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="six columns  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/26.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/26.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/18.jpg"><img src="img/albums/street/18.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/19.jpg"><img src="img/albums/street/19.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/20.jpg"><img src="img/albums/street/20.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/21.jpg"><img src="img/albums/street/21.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/22.jpg"><img src="img/albums/street/22.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="Street Photograpy Album</span>" href="img/albums/street/27.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/27.jpg">
-									</div>	
-								</a>
-							</div>
-							<div class="ten columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/28.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/28.jpg">
-									</div>	
-								</a>
-							</div>
-							<div class="three columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/29.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/29.jpg">
-									</div>
-								</a>
-							</div>
+						 <div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/23.jpg"><img src="img/albums/street/23.jpg"></a>
 						</div>
-						<div class="row container">
-							<div class="one-third column work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/30.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/30.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/31.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/31.jpg">
-									</div>
-								</a>
-							</div>
-							<div class="one-third column  work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album </span>" href="img/albums/street/32.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/32.jpg">
-									</div>
-								</a>
-							</div>
-						</div>
-						<div class="row container">
-							<div class="six columns work">
-								<a class="venobox" data-gall="outdoors-gallery" data-title="<span>Street Photograpy Album</span>" href="img/albums/street/33.jpg">
-									<div class="background-image">
-										<img alt="" class="" src="img/albums/street/33.jpg">
-									</div>
-								</a>
-							</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/24.jpg"><img src="img/albums/street/24.jpg"></a>
 						</div>
 					</div>
-					<div class="albums-nav margTop">
-						<div class="one-third column tLeft">
-							<a class="link prev-album" href="works_babybauch.html">Zurück</a>
+					<div class="column-gallery">
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/25.jpg"><img src="img/albums/street/25.jpg"></a>
 						</div>
-						<div class="one-third column tCenter">
-							<h3>Street Photograpy Album / <span> 33 photo</span></h3>
+						<div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/26.jpg"><img src="img/albums/street/26.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/27.jpg"><img src="img/albums/street/27.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/28.jpg"><img src="img/albums/street/28.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							 <a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/29.jpg"><img src="img/albums/street/29.jpg"></a>
+						 </div>
+						 <div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/30.jpg"><img src="img/albums/street/30.jpg"></a>
 						</div>
-						<div class="one-third column tRight">
-							<a class="link next-album" href="#">Nächste</a>
+						 <div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/31.jpg"><img src="img/albums/street/31.jpg"></a>
+						</div>
+						<div class="hovereffect">
+							<a class="venobox" data-gall="outdoors-gallery"  href="img/albums/street/32.jpg"><img src="img/albums/street/32.jpg"></a>
 						</div>
 					</div>
 				</div>
 			</section>
+			
 			<footer class="footer-opaque ofsInMTop ofsInMBottom footer">
 				<div class="container">
 					<div class="row">
