--- a/works_babybauch.html
+++ b/works_babybauch.html
@@ -51,7 +51,7 @@
 									<li class="menu"><a class="active" href="works_babybauch.html">PORTFOLIO</a></li>
 									<li class="menu"><a href="contact.html">KONTAKT</a></li>
 								</ul>
-							</nav>
+						</nav>
 					</div>
 				</div>
 			</div>
@@ -60,8 +60,8 @@
 	<section class="footer-opaque ofsTopH ofsInMBottom footer">
 		<div class="container">
 			<div class="sixteen columns">
-			<div class="album-cat filter margBottom">
-				<ul>
+			<div class="album-cat nav margBottom">
+				<ul class="menu">
 					<li><a href="works_babybauch.html">BABYBAUCH</a></li>
 					<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
 					<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
