--- a/works_hochzeit.html
+++ b/works_hochzeit.html
@@ -51,7 +51,7 @@
 											<li class="menu"><a class="active" href="works_babybauch.html">PORTFOLIO</a></li>
 											<li class="menu"><a href="contact.html">KONTAKT</a></li>
 										</ul>
-									</nav>
+								</nav>
 							</div>
 						</div>
 					</div>
@@ -60,7 +60,7 @@
 			<section class="footer-opaque ofsTopH ofsInMBottom footer">
 				<div class="container">
 					<div class="sixteen columns">
-					<div class="album-cat filter margBottom">
+						<div class="album-cat nav margBottom">
 						<ul>
 							<li><a href="works_babybauch.html">BABYBAUCH</a></li>
 							<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
