--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
 							<ul class="menu">
 								<li class="menu"><a class="active" a href="index.html">HOME</a>	</li>
 								<li class="menu"><a href="about.html">ÜBER MICH</a></li>
-								<li class="menu"><a href="works_neugeborene.html">PORTFOLIO</a></li>
+								<li class="sub"><a href="works_neugeborene.html">PORTFOLIO</a>
+									<ul class="dropDown">
+										<li><a href="works_babybauch.html">BABYBAUCH</a></li>
+										<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
+										<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
+										<li><a href="works_street.html">STREET</a></li>
+									</ul>	
+								</li>
 								<li class="menu"><a href="contact.html">KONTAKT</a></li>
 							</ul>
 						</nav>
