--- a/works_neugeborene.html
+++ b/works_neugeborene.html
@@ -46,12 +46,19 @@
 								<a href="#" class="mobile-btn" ><i class="ti-menu"></i></a>
 								<nav class="menu-holder main-nav">
 									<ul class="menu">
-											<li class="menu"><a href="index.html">HOME</a></li>
-											<li class="menu"><a href="about.html">ÜBER MICH</a></li>
-											<li class="menu"><a class="active" href="works_babybauch.html">PORTFOLIO</a></li>
-											<li class="menu"><a href="contact.html">KONTAKT</a></li>
-										</ul>
-									</nav>
+										<li class="menu"><a class="active" a href="index.html">HOME</a>	</li>
+										<li class="menu"><a href="about.html">ÜBER MICH</a></li>
+										<li class="sub"><a href="works_neugeborene.html">PORTFOLIO</a>
+											<ul class="dropDown">
+												<li><a href="works_babybauch.html">BABYBAUCH</a></li>
+												<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
+												<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
+												<li><a href="works_street.html">STREET</a></li>
+											</ul>	
+										</li>
+										<li class="menu"><a href="contact.html">KONTAKT</a></li>
+									</ul>
+								</nav>
 							</div>
 						</div>
 					</div>
@@ -60,7 +67,7 @@
 			<section class="footer-opaque ofsTopH ofsInMBottom footer">
 				<div class="container">
 					<div class="sixteen columns">
-					<div class="album-cat filter margBottom">
+						<div class="album-cat nav margBottom">
 						<ul>
 							<li><a href="works_babybauch.html">BABYBAUCH</a></li>
 							<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
