--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
 						<a href="#" class="mobile-btn" ><i class="ti-menu"></i></a>
 							<nav class="menu-holder main-nav">
 								<ul class="menu">
-									<li class="menu"><a class="active" a href="index.html">HOME</a>	</li>
-									<li class="menu"><a href="about.html">ÜBER MICH</a></li>
+									<li class="menu"><a href="index.html">HOME</a>	</li>
+									<li class="menu"><a class="active" href="about.html">ÜBER MICH</a></li>
 									<li class="sub"><a href="works_neugeborene.html">PORTFOLIO</a>
 										<ul class="dropDown">
 											<li><a href="works_babybauch.html">BABYBAUCH</a></li>
