--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 								<a href="#" class="mobile-btn" ><i class="ti-menu"></i></a>
 									<nav class="menu-holder main-nav">
 										<ul class="menu">
-											<li class="menu"><a class="active" a href="index.html">HOME</a>	</li>
+											<li class="menu"><a href="index.html">HOME</a>	</li>
 											<li class="menu"><a href="about.html">ÜBER MICH</a></li>
 											<li class="sub"><a href="works_neugeborene.html">PORTFOLIO</a>
 												<ul class="dropDown">
@@ -54,7 +54,7 @@
 													<li><a href="works_street.html">STREET</a></li>
 												</ul>	
 											</li>
-											<li class="menu"><a href="contact.html">KONTAKT</a></li>
+											<li class="menu"><a class="active" href="contact.html">KONTAKT</a></li>
 										</ul>
 									</nav>
 							</div>
