fix menu active

--- a/works_babybauch.html
+++ b/works_babybauch.html
@@ -69,7 +69,7 @@
 			<div class="sixteen columns">
 			<div class="album-cat nav margBottom">
 				<ul class="menu">
-					<li><a href="works_babybauch.html">BABYBAUCH</a></li>
+					<li><a class="active" href="works_babybauch.html">BABYBAUCH</a></li>
 					<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
 					<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
 					<li><a href="works_street.html">STREET</a></li>
