--- a/works_hochzeit.html
+++ b/works_hochzeit.html
@@ -70,7 +70,7 @@
 						<div class="album-cat nav margBottom">
 						<ul>
 							<li><a href="works_babybauch.html">BABYBAUCH</a></li>
-							<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
+							<li><a class="active" href="works_hochzeit.html">HOCHZEIT</a></li>
 							<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
 							<li><a href="works_street.html">STREET</a></li>
 						</ul>
