--- a/works_neugeborene.html
+++ b/works_neugeborene.html
@@ -71,7 +71,7 @@
 						<ul>
 							<li><a href="works_babybauch.html">BABYBAUCH</a></li>
 							<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
-							<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
+							<li><a class="active" href="works_neugeborene.html">NEUGEBORENE</a></li>
 							<li><a href="works_street.html">STREET</a></li>
 						</ul>
 					</div>
