--- a/works_street.html
+++ b/works_street.html
@@ -72,7 +72,7 @@
 							<li><a href="works_babybauch.html">BABYBAUCH</a></li>
 							<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
 							<li><a href="works_neugeborene.html">NEUGEBORENE</a></li>
-							<li><a href="works_street.html">STREET</a></li>
+							<li><a class="active" href="works_street.html">STREET</a></li>
 						</ul>
 					</div>
 				</div>
