--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <!--[if gt IE 8]><!--> 
 <html class="no-js"> <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <title>Vivien Vincze Fotografin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/skeleton.css" rel="stylesheet" type="text/css" media="all"/>
  		<link href="css/base.css" rel="stylesheet" type="text/css" media="all"/>
