--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> 
 <html class="no-js"> <!--<![endif]-->
     <head>
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+        <meta charset="utf-8">
         <title>Vivien Vincze Fotografin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,11 @@
 	<div class="nav-bar">
 		<div class="container">
 			<div class="main-nav">
-				
+				<div class="four columns logo-holder">
+					<a href="index.html">
+						<img class="logo" alt="Logo" src="img/logo.png">
+					</a>
+				</div>
 				
 				<div class="twelve columns tRight nav-holder">
 					<a href="#" class="mobile-btn" ><i class="ti-menu"></i></a>
