add cookie and few ui fix

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 		</div>
 	</header>
 	<section class="about hero full">
-		<div class="background-image hero  profile full">
+		<div class="background-image hero profile full">
 			<img alt="" class="" src="img/about/about.jpg">
 		</div>
 		<div class="container vertical-align">
@@ -73,13 +73,19 @@
 					<div class="content-inner">
 						<h1>Vincze Vivien<span>Fotografin</span></h1>
 						<p>Ich bin Vincze Vivien, eine begeisterte Fotografin.
-									Ich wurde in Kecskemét geboren und lebe seit acht Jahren in Österreich.
-									Nach dem Tourismusstudium kehrte ich schnell zu meinem Kindheitstraum zurück und begann Grafik zu studieren, da ich mich bereits als kleines Mädchen für alle visuellen Bereiche interessierte. Neben meinem Grafikstudium füllte die Fotografie meine Freizeit.
-									Dies war die Zeit, als mir klar wurde, dass ich meine Kreativität wirklich in die Fotografie einbringen konnte. Die Lichter, die Farben, das Lachen, das Gefühl des Augenblicks, das ist meine Inspiration.Warum ist mir das wichtig? Es fühlt sich unglaublich an und gibt mir Energie, wenn meine Arbeit Menschen Freude macht.
-									Mein Ziel ist es, die Gefühle und die Stimmung des Augenblicks festzuhalten und sie als ewige Erinnerung zurückzugeben, sei es als Paar-, Familie-, Hochzeit- oder sogar als Neugeborenefotografie
-									„Ein Bild sagt mehr als tausende Worte“, heißt es. Die Bilder sollten also statt Worte sprechen. Meine Referenz finden Sie im Portfolio. Wenn Sie auf das Menü Kontakt klicken, finden Sie meine Kontaktdaten, unter denen ich Sie gerne kontaktieren würde!
-									Alles Liebe
-									Vivien</p>
+							<br>Ich wurde in Kecskemét geboren und lebe seit acht Jahren in Österreich.
+									Nach dem Tourismusstudium kehrte ich schnell zu meinem Kindheitstraum zurück und begann Grafik zu studieren, 
+									da ich mich bereits als kleines Mädchen für alle visuellen Bereiche interessierte. 
+									Neben meinem Grafikstudium füllte die Fotografie meine Freizeit.<br><br>
+									Dies war die Zeit, als mir klar wurde, dass ich meine Kreativität wirklich in die Fotografie einbringen konnte. 
+									Die Lichter, die Farben, das Lachen, das Gefühl des Augenblicks, das ist meine Inspiration.Warum ist mir das wichtig? 
+									Es fühlt sich unglaublich an und gibt mir Energie, wenn meine Arbeit Menschen Freude macht.<br><br>
+									Mein Ziel ist es, die Gefühle und die Stimmung des Augenblicks festzuhalten und sie als ewige Erinnerung zurückzugeben, 
+									sei es als Paar-, Familie-, Hochzeit- oder sogar als Neugeborenefotografie <br><br>
+									„Ein Bild sagt mehr als tausende Worte“, heißt es. Die Bilder sollten also statt Worte sprechen. 
+									Meine Referenz finden Sie im Portfolio. Wenn Sie auf das Menü Kontakt klicken, finden Sie meine Kontaktdaten, 
+									unter denen ich Sie gerne kontaktieren würde!<br><br> 
+									Liebe Vivien</p>
 						<a href="works_babybauch.html" class="link link-light">zu den Fotos</a>
 					</div>	
 				</div>
