--- a/works_babybauch.html
+++ b/works_babybauch.html
@@ -64,10 +64,11 @@
 			</div>
 		</div>
 	</header>
-	<section class="footer-opaque ofsTopH ofsInMBottom footer">
+	<section class="footer-opaque ofsTopH ofsInMBottom footer gray">
 		<div class="container">
+			<h1 style="text-align: center;">PORTFOLIO</h1>
 			<div class="sixteen columns">
-			<div class="album-cat nav margBottom">
+			<div class="album-cat nav">
 				<ul class="menu">
 					<li><a class="active" href="works_babybauch.html">BABYBAUCH</a></li>
 					<li><a href="works_hochzeit.html">HOCHZEIT</a></li>
