--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link href="css/font.css" rel="stylesheet" type="text/css">
 		<link href="css/fontello.css" rel="stylesheet" type="text/css"> 
 		<link href="css/themify-icons.css" rel="stylesheet" type="text/css">
+		<link href="css/cookie.css" rel="stylesheet" type="text/css">
         <!--[if gte IE 9]>
         	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
 		<![endif]-->
@@ -107,7 +108,17 @@
 		</div>
 	</footer>
 </div>
+<div class="cookie-container">
+	<p>
+	  We use cookies in this website to give you the best experience on our
+	  site and show you relevant ads. To find out more, read our
+	  <a href="#">privacy policy</a> and <a href="#">cookie policy</a>.
+	</p>
 
+	<button class="cookie-btn">
+	  Okay
+	</button>
+  </div>
 <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>		
 <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 <script src="js/venobox.min.js" type="text/javascript"></script>
