--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 									„Ein Bild sagt mehr als tausende Worte“, heißt es. Die Bilder sollten also statt Worte sprechen. 
 									Meine Referenz finden Sie im Portfolio. Wenn Sie auf das Menü Kontakt klicken, finden Sie meine Kontaktdaten, 
 									unter denen ich Sie gerne kontaktieren würde!<br><br> 
-									Liebe Vivien</p>
+									Alles Liebe Vivien</p>
 						<a href="works_babybauch.html" class="link link-light">zu den Fotos</a>
 					</div>	
 				</div>
