fix html remove php

--- a/works_street.html
+++ b/works_street.html
@@ -1,10 +1,7 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> 
-<html class="no-js"> <!--<![endif]-->
+
+<html class="no-js"> 
     <head>
         <meta charset="utf-8">
         <title>Vivien Vincze Fotografin</title>
@@ -19,9 +16,7 @@
 		<link href="css/font.css" rel="stylesheet" type="text/css">
 		<link href="css/fontello.css" rel="stylesheet" type="text/css">
 		<link href="css/themify-icons.css" rel="stylesheet" type="text/css">
-        <!--[if gte IE 9]>
-        	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
-		<![endif]-->
+       
     </head>
     <body>
 		<div id="loader">
