--- a/about.html
+++ b/about.html
@@ -1,10 +1,7 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> 
-<html class="no-js"> <!--<![endif]-->
+
+<html class="no-js">
     <head>
         <meta charset="utf-8">
         <title>Vivien Vincze Fotografin</title>
@@ -18,9 +15,7 @@
 		<link href="css/font.css" rel="stylesheet" type="text/css">
 		<link href="css/fontello.css" rel="stylesheet" type="text/css">
 		<link href="css/themify-icons.css" rel="stylesheet" type="text/css">
-        <!--[if gte IE 9]>
-        	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
-		<![endif]-->
+       
     </head>
     <body>
 <div id="loader">
@@ -109,9 +104,7 @@
 			</div>
 		</div>
 	</footer>
-</div>			
-	
-<!--Javascript-->	
+</div>				
 <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>			
 <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 <script src="js/venobox.min.js" type="text/javascript"></script>
@@ -119,13 +112,6 @@
 <script src="js/spectragram.min.js" type="text/javascript"></script>
 <script src="js/modernizr.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
-
-
-<!-- Google analytics -->
-
-
-<!-- End google analytics -->
-
 
     </body>
 </html>
