--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html class="no-js"> 
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> 
+<html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <title>Vivien Vincze Fotografin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/skeleton.css" rel="stylesheet" type="text/css" media="all"/>
  		<link href="css/base.css" rel="stylesheet" type="text/css" media="all"/>
@@ -14,6 +17,9 @@
 		<link href="css/fontello.css" rel="stylesheet" type="text/css"> 
 		<link href="css/themify-icons.css" rel="stylesheet" type="text/css">
 		<link href="css/cookie.css" rel="stylesheet" type="text/css">
+        <!--[if gte IE 9]>
+        	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
+		<![endif]-->
     </head>
     <body>
 <div id="loader">
@@ -114,10 +120,10 @@
 	</button>
 </div>
 <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>		
-<script src="js/jquery.flexslider-min.js" type="text/javascript"></script> 
+<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 <script src="js/venobox.min.js" type="text/javascript"></script>
 <script src="js/masonry.min.js" type="text/javascript"></script>
-<script src="js/spectragram.min.js" type="text/javascript"></script> 
+<script src="js/spectragram.min.js" type="text/javascript"></script>
 <script src="js/modernizr.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
 </body>
