--- a/works_babybauch.html
+++ b/works_babybauch.html
@@ -4,7 +4,7 @@
 <html class="no-js"> 
     <head>
         <meta charset="utf-8">
-        <title>SELFIE - Personal Photographer HTML Template</title>
+        <title>Vivien Vincze Fotografin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
