--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 						<div class="eight columns contact-info bgDark">
 							<div class="content">
 								<h1>Kontakt Information</h1>	
-									<p> Vivien Vincze<br>Email / <a href="mailto:vinczevivien89@gmail.com">info@vivienphoto.com</a><br></p>
+									<p> Vivien Vincze<br>Email / <a href="mailto:vinczevivien89@gmail.com">vinczevivien89@gmail.com</a><br></p>
 									<p>Telefonnummer<br>+43660 292 0663<br>
 								</p>
 							</div>
